--- a/Data_processing.ipynb
+++ b/Data_processing.ipynb
@@ -41,7 +41,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "eHPI5pTirx3A",
-        "outputId": "e5059310-a66e-4c39-ccf1-c2785783b54c",
+        "outputId": "631892f1-2ca7-44e0-8869-205903b58519",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -59,12 +59,12 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 68,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -104,60 +104,39 @@
         "sensor_data = pd.concat(dataframes, ignore_index=True).drop('seq', axis=1)\n",
         "sensor_data.to_csv('sensor.csv')"
       ],
-      "execution_count": 148,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MOKgSyE1rx3F",
-        "outputId": "d97f0ff9-c67f-4897-f17c-69da417caeaa",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 221
-        }
+        "id": "MOKgSyE1rx3F"
       },
       "source": [
-        "subjects = sensor_data.user_id.unique()\n",
-        "train_subjects, test_subjects = subjects[: int(0.98*len(subjects))], subjects[int(0.98*len(subjects)):]\n",
+        "def split_data():\n",
+        "    subjects = sensor_data.user_id.unique()\n",
+        "    train_subjects, test_subjects = subjects[: int(0.98*len(subjects))], subjects[int(0.98*len(subjects)):]\n",
         "\n",
-        "df_train, df_test = sensor_data[sensor_data.user_id != 's1758009'], sensor_data[sensor_data.user_id == 's1758009']\n",
+        "    df_train, df_test = sensor_data[sensor_data.user_id != 's1758009'], sensor_data[sensor_data.user_id == 's1758009']\n",
         "\n",
-        "scale_columns = ['accel_x', 'accel_y', 'accel_z']\n",
+        "    scale_columns = ['accel_x', 'accel_y', 'accel_z']\n",
         "\n",
-        "scaler = RobustScaler()\n",
+        "    scaler = RobustScaler()\n",
         "\n",
-        "scaler = scaler.fit(df_train[scale_columns])\n",
+        "    scaler = scaler.fit(df_train[scale_columns])\n",
         "\n",
-        "df_train.loc[:, scale_columns] = scaler.transform(\n",
-        "  df_train.loc[:, scale_columns].to_numpy()\n",
-        ")\n",
+        "    df_train.loc[:, scale_columns] = scaler.transform(\n",
+        "      df_train.loc[:, scale_columns].to_numpy()\n",
+        "    )\n",
         "\n",
-        "df_test.loc[:, scale_columns] = scaler.transform(\n",
-        "  df_test.loc[:, scale_columns].to_numpy()\n",
-        ")"
+        "    df_test.loc[:, scale_columns] = scaler.transform(\n",
+        "      df_test.loc[:, scale_columns].to_numpy()\n",
+        "    )\n",
+        "\n",
+        "    return df_train, df_test"
       ],
-      "execution_count": 200,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/pandas/core/indexing.py:1736: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  isetter(loc, value[:, i].tolist())\n",
-            "/usr/local/lib/python3.6/dist-packages/pandas/core/indexing.py:1736: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  isetter(loc, value[:, i].tolist())\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 19,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -177,35 +156,39 @@
         "TIME_STEPS = 36\n",
         "STEP = 10\n",
         "\n",
-        "X_train, y_train = create_dataset(\n",
-        "    df_train[scale_columns],\n",
-        "    df_train.activity,\n",
-        "    TIME_STEPS,\n",
-        "    STEP\n",
-        ")\n",
+        "def create_whole_dataset(time_steps, step):\n",
+        "    df_train, df_test = split_data()\n",
+        "    X_train, y_train = create_dataset(\n",
+        "        df_train[scale_columns],\n",
+        "        df_train.activity,\n",
+        "        time_steps,\n",
+        "        step\n",
+        "    )\n",
         "\n",
-        "X_test, y_test = create_dataset(\n",
-        "    df_test[scale_columns],\n",
-        "    df_test.activity,\n",
-        "    TIME_STEPS,\n",
-        "    STEP\n",
-        ")\n",
+        "    X_test, y_test = create_dataset(\n",
+        "        df_test[scale_columns],\n",
+        "        df_test.activity,\n",
+        "        time_steps,\n",
+        "        step\n",
+        "    )\n",
         "\n",
-        "enc = OneHotEncoder(handle_unknown='ignore', sparse=False)\n",
+        "    enc = OneHotEncoder(handle_unknown='ignore', sparse=False)\n",
         "\n",
-        "enc = enc.fit(y_train)\n",
+        "    enc = enc.fit(y_train)\n",
         "\n",
-        "y_train = enc.transform(y_train)\n",
-        "y_test = enc.transform(y_test)"
+        "    y_train = enc.transform(y_train)\n",
+        "    y_test = enc.transform(y_test)\n",
+        "\n",
+        "create_whole_dataset(TIME_STEPS, STEP)"
       ],
-      "execution_count": 205,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "Z_1ki4bR8j7R",
-        "outputId": "a1672437-d33c-4325-caa0-f6caae65400d",
+        "outputId": "06cc2f8d-6cb5-4729-a323-1d4a7f6aaa1f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 374
@@ -232,31 +215,31 @@
         "\n",
         "evaluate_model(X_train, y_train, X_test, y_test)"
       ],
-      "execution_count": 207,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/10\n",
-            "212/212 [==============================] - 2s 8ms/step - loss: 1.2784 - accuracy: 0.5590\n",
+            "212/212 [==============================] - 1s 7ms/step - loss: 1.2788 - accuracy: 0.5553\n",
             "Epoch 2/10\n",
-            "212/212 [==============================] - 2s 8ms/step - loss: 0.7764 - accuracy: 0.7102\n",
+            "212/212 [==============================] - 1s 7ms/step - loss: 0.7685 - accuracy: 0.7150\n",
             "Epoch 3/10\n",
-            "212/212 [==============================] - 2s 8ms/step - loss: 0.6230 - accuracy: 0.7768\n",
+            "212/212 [==============================] - 1s 7ms/step - loss: 0.6170 - accuracy: 0.7760\n",
             "Epoch 4/10\n",
-            "212/212 [==============================] - 2s 8ms/step - loss: 0.5232 - accuracy: 0.8102\n",
+            "212/212 [==============================] - 1s 7ms/step - loss: 0.5254 - accuracy: 0.8084\n",
             "Epoch 5/10\n",
-            "212/212 [==============================] - 2s 10ms/step - loss: 0.4707 - accuracy: 0.8290\n",
+            "212/212 [==============================] - 1s 7ms/step - loss: 0.4663 - accuracy: 0.8322\n",
             "Epoch 6/10\n",
-            "212/212 [==============================] - 2s 10ms/step - loss: 0.4156 - accuracy: 0.8483\n",
+            "212/212 [==============================] - 1s 7ms/step - loss: 0.4053 - accuracy: 0.8541\n",
             "Epoch 7/10\n",
-            "212/212 [==============================] - 2s 9ms/step - loss: 0.3903 - accuracy: 0.8575\n",
+            "212/212 [==============================] - 1s 7ms/step - loss: 0.3731 - accuracy: 0.8610\n",
             "Epoch 8/10\n",
-            "212/212 [==============================] - 2s 8ms/step - loss: 0.3611 - accuracy: 0.8675\n",
+            "212/212 [==============================] - 1s 6ms/step - loss: 0.3441 - accuracy: 0.8796\n",
             "Epoch 9/10\n",
-            "212/212 [==============================] - 2s 8ms/step - loss: 0.3254 - accuracy: 0.8836\n",
+            "212/212 [==============================] - 1s 7ms/step - loss: 0.3239 - accuracy: 0.8830\n",
             "Epoch 10/10\n",
-            "212/212 [==============================] - 2s 8ms/step - loss: 0.3130 - accuracy: 0.8881\n"
+            "212/212 [==============================] - 1s 7ms/step - loss: 0.3096 - accuracy: 0.8858\n"
           ],
           "name": "stdout"
         },
@@ -264,26 +247,15 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.6930320262908936"
+              "0.7363465428352356"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 207
+          "execution_count": 24
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "SF56hHZ8HlcF"
-      },
-      "source": [
-        "|"
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
