Generate model file

--- a/Data_processing.ipynb
+++ b/Data_processing.ipynb
@@ -41,7 +41,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "eHPI5pTirx3A",
-        "outputId": "631892f1-2ca7-44e0-8869-205903b58519",
+        "outputId": "3e1b14d9-6f5e-446a-d45b-13035490496c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -54,17 +54,26 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import RobustScaler, OneHotEncoder\n",
         "from scipy import stats\n",
-        "import keras\n",
-        "from keras.layers import Conv1D, Dropout, Dense, MaxPooling1D, Flatten\n",
+        "import tensorflow as tf\n",
+        "from keras import Sequential\n",
+        "from keras.utils import to_categorical\n",
+        "from keras.models import Model\n",
+        "from keras.layers import Input\n",
+        "from keras.layers import Dense\n",
+        "from keras.layers import Flatten\n",
+        "from keras.layers import Dropout\n",
+        "from keras.layers.convolutional import Conv1D\n",
+        "from keras.layers.convolutional import MaxPooling1D\n",
+        "from keras.layers.merge import concatenate\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -101,10 +110,9 @@
         "        file_data.insert(1, 'activity', activity)\n",
         "    \n",
         "\n",
-        "sensor_data = pd.concat(dataframes, ignore_index=True).drop('seq', axis=1)\n",
-        "sensor_data.to_csv('sensor.csv')"
+        "sensor_data = pd.concat(dataframes, ignore_index=True).drop('seq', axis=1)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -113,13 +121,13 @@
         "id": "MOKgSyE1rx3F"
       },
       "source": [
-        "def split_data():\n",
+        "scale_columns = ['accel_x', 'accel_y', 'accel_z']\n",
+        "\n",
+        "def split_data(leave_subject):\n",
         "    subjects = sensor_data.user_id.unique()\n",
         "    train_subjects, test_subjects = subjects[: int(0.98*len(subjects))], subjects[int(0.98*len(subjects)):]\n",
         "\n",
-        "    df_train, df_test = sensor_data[sensor_data.user_id != 's1758009'], sensor_data[sensor_data.user_id == 's1758009']\n",
-        "\n",
-        "    scale_columns = ['accel_x', 'accel_y', 'accel_z']\n",
+        "    df_train, df_test = sensor_data[sensor_data.user_id != leave_subject], sensor_data[sensor_data.user_id == leave_subject]\n",
         "\n",
         "    scaler = RobustScaler()\n",
         "\n",
@@ -135,13 +143,18 @@
         "\n",
         "    return df_train, df_test"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dH81IgNCrx3I"
+        "id": "dH81IgNCrx3I",
+        "outputId": "8fca915f-e72b-49c2-ba26-b2d4e9a8e8de",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        }
       },
       "source": [
         "def create_dataset(X, y, time_steps=1, step=1):\n",
@@ -157,7 +170,7 @@
         "STEP = 10\n",
         "\n",
         "def create_whole_dataset(time_steps, step):\n",
-        "    df_train, df_test = split_data()\n",
+        "    df_train, df_test = split_data('s1758009')\n",
         "    X_train, y_train = create_dataset(\n",
         "        df_train[scale_columns],\n",
         "        df_train.activity,\n",
@@ -179,83 +192,212 @@
         "    y_train = enc.transform(y_train)\n",
         "    y_test = enc.transform(y_test)\n",
         "\n",
-        "create_whole_dataset(TIME_STEPS, STEP)"
+        "    return X_train, y_train, X_test, y_test\n",
+        "\n",
+        "X_train, y_train, X_test, y_test = create_whole_dataset(TIME_STEPS, STEP)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/pandas/core/indexing.py:1736: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  isetter(loc, value[:, i].tolist())\n",
+            "/usr/local/lib/python3.6/dist-packages/pandas/core/indexing.py:1736: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  isetter(loc, value[:, i].tolist())\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "Z_1ki4bR8j7R",
-        "outputId": "06cc2f8d-6cb5-4729-a323-1d4a7f6aaa1f",
+        "outputId": "c4ba7eba-e5b6-4cfa-e8f2-33b3a18b345a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 374
+          "height": 357
         }
       },
       "source": [
-        "def evaluate_model(trainX, trainy, testX, testy):\n",
-        "    verbose, epochs, batch_size = 1, 10, 32\n",
-        "    n_timesteps, n_features, n_outputs = trainX.shape[1], trainX.shape[2], trainy.shape[1]\n",
-        "    model = keras.Sequential()\n",
-        "    model.add(Conv1D(filters=64, kernel_size=3, activation='relu', input_shape=(n_timesteps,n_features)))\n",
-        "    model.add(Conv1D(filters=64, kernel_size=3, activation='relu'))\n",
-        "    model.add(Dropout(0.5))\n",
-        "    model.add(MaxPooling1D(pool_size=2))\n",
-        "    model.add(Flatten())\n",
-        "    model.add(Dense(100, activation='relu'))\n",
-        "    model.add(Dense(n_outputs, activation='softmax'))\n",
-        "    model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
-        "    # fit network\n",
-        "    model.fit(trainX, trainy, epochs=epochs, batch_size=batch_size, verbose=verbose)\n",
-        "    # evaluate model\n",
-        "    _, accuracy = model.evaluate(testX, testy, batch_size=batch_size, verbose=0)\n",
-        "    return accuracy\n",
+        "def create_model(trainX, trainy, testX, testy):\n",
+        "\tverbose, epochs, batch_size = 1, 10, 32\n",
+        "\tn_timesteps, n_features, n_outputs = trainX.shape[1], trainX.shape[2], trainy.shape[1]\n",
+        "\tmodel = Sequential()\n",
+        "\tmodel.add(Conv1D(filters=64, kernel_size=3, activation='relu', input_shape=(n_timesteps,n_features)))\n",
+        "\tmodel.add(Conv1D(filters=64, kernel_size=3, activation='relu'))\n",
+        "\tmodel.add(Dropout(0.5))\n",
+        "\tmodel.add(MaxPooling1D(pool_size=2))\n",
+        "\tmodel.add(Flatten())\n",
+        "\tmodel.add(Dense(100, activation='relu'))\n",
+        "\tmodel.add(Dense(n_outputs, activation='softmax'))\n",
+        "\tmodel.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+        "\t# fit network\n",
+        "\tmodel.fit(trainX, trainy, epochs=epochs, batch_size=batch_size, verbose=verbose)\n",
+        "\treturn model\n",
         "\n",
-        "evaluate_model(X_train, y_train, X_test, y_test)"
+        "model = create_model(X_train, y_train, X_test, y_test)\n",
+        "\n",
+        "# evaluate model\n",
+        "_, accuracy = model.evaluate(X_test, y_test, batch_size=32, verbose=0)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/10\n",
-            "212/212 [==============================] - 1s 7ms/step - loss: 1.2788 - accuracy: 0.5553\n",
+            "212/212 [==============================] - 2s 8ms/step - loss: 1.2428 - accuracy: 0.5717\n",
             "Epoch 2/10\n",
-            "212/212 [==============================] - 1s 7ms/step - loss: 0.7685 - accuracy: 0.7150\n",
+            "212/212 [==============================] - 2s 8ms/step - loss: 0.7507 - accuracy: 0.7284\n",
             "Epoch 3/10\n",
-            "212/212 [==============================] - 1s 7ms/step - loss: 0.6170 - accuracy: 0.7760\n",
+            "212/212 [==============================] - 2s 8ms/step - loss: 0.6210 - accuracy: 0.7723\n",
             "Epoch 4/10\n",
-            "212/212 [==============================] - 1s 7ms/step - loss: 0.5254 - accuracy: 0.8084\n",
+            "212/212 [==============================] - 2s 8ms/step - loss: 0.5081 - accuracy: 0.8250\n",
             "Epoch 5/10\n",
-            "212/212 [==============================] - 1s 7ms/step - loss: 0.4663 - accuracy: 0.8322\n",
+            "212/212 [==============================] - 2s 8ms/step - loss: 0.4483 - accuracy: 0.8409\n",
             "Epoch 6/10\n",
-            "212/212 [==============================] - 1s 7ms/step - loss: 0.4053 - accuracy: 0.8541\n",
+            "212/212 [==============================] - 2s 8ms/step - loss: 0.3992 - accuracy: 0.8563\n",
             "Epoch 7/10\n",
-            "212/212 [==============================] - 1s 7ms/step - loss: 0.3731 - accuracy: 0.8610\n",
+            "212/212 [==============================] - 2s 8ms/step - loss: 0.3707 - accuracy: 0.8653\n",
             "Epoch 8/10\n",
-            "212/212 [==============================] - 1s 6ms/step - loss: 0.3441 - accuracy: 0.8796\n",
+            "212/212 [==============================] - 2s 8ms/step - loss: 0.3392 - accuracy: 0.8782\n",
             "Epoch 9/10\n",
-            "212/212 [==============================] - 1s 7ms/step - loss: 0.3239 - accuracy: 0.8830\n",
+            "212/212 [==============================] - 2s 8ms/step - loss: 0.3118 - accuracy: 0.8857\n",
             "Epoch 10/10\n",
-            "212/212 [==============================] - 1s 7ms/step - loss: 0.3096 - accuracy: 0.8858\n"
+            "212/212 [==============================] - 2s 8ms/step - loss: 0.3095 - accuracy: 0.8891\n"
           ],
           "name": "stdout"
-        },
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q-xVSziIYRsz",
+        "outputId": "2e48fbd7-1cf6-4b5c-8ccb-223eeaffaf33",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        }
+      },
+      "source": [
+        "converter = tf.lite.TFLiteConverter.from_keras_model(model)\n",
+        "tflite_model = converter.convert()\n",
+        "\n",
+        "with open('model.tflite', 'wb') as f:\n",
+        "  f.write(tflite_model)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/tracking/tracking.py:111: Model.state_updates (from tensorflow.python.keras.engine.training) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "This property should not be used in TensorFlow 2.0, as updates are applied automatically.\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/tracking/tracking.py:111: Layer.updates (from tensorflow.python.keras.engine.base_layer) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "This property should not be used in TensorFlow 2.0, as updates are applied automatically.\n",
+            "INFO:tensorflow:Assets written to: /tmp/tmp_cf5987n/assets\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DScAzOkGyJTO",
+        "outputId": "ed8d4bc1-7d25-48aa-d7a1-1d5ea362af0a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 391
+        }
+      },
+      "source": [
+        "model.summary()"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential_2\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "conv1d_7 (Conv1D)            (None, 34, 64)            640       \n",
+            "_________________________________________________________________\n",
+            "conv1d_8 (Conv1D)            (None, 32, 64)            12352     \n",
+            "_________________________________________________________________\n",
+            "dropout_5 (Dropout)          (None, 32, 64)            0         \n",
+            "_________________________________________________________________\n",
+            "max_pooling1d_5 (MaxPooling1 (None, 16, 64)            0         \n",
+            "_________________________________________________________________\n",
+            "flatten_5 (Flatten)          (None, 1024)              0         \n",
+            "_________________________________________________________________\n",
+            "dense_6 (Dense)              (None, 100)               102500    \n",
+            "_________________________________________________________________\n",
+            "dense_7 (Dense)              (None, 15)                1515      \n",
+            "=================================================================\n",
+            "Total params: 117,007\n",
+            "Trainable params: 117,007\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LjVxhQ09xnn9",
+        "outputId": "c57fb8f8-9c36-4719-d1e4-5fbb8fdc424a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "model.input_shape"
+      ],
+      "execution_count": null,
+      "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.7363465428352356"
+              "(None, 36, 3)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 30
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mcV2fZchySxD"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
